# jsonrpc-client

./: LICENSE  README.md  client.py  gen_dialog.py  pyproject.toml  setup.py
jsonrpc_client/: ipc.py  ipc_flat.py  main_window.py  multithread.py  wade.py  worker.py
src/jsonrpc_client/: external_processes.py  menu_event.py
ui/: main_window.ui  resources.qrc
